    - print nice error message if computed set of supported versions is empty
      (closes: 583392)
  * debian/rules: do not ignore errors (two more `set -e`s added, closes:
    397499)
  * python-doc now suggests python-examples (closes: #585774)
  * python package doesn't conflict with python2.1 and python2.3 anymore (2.1
    and 2.3 are no longer in Debian)

  [ Scott Kitterman ]
  * Merge changes back from Ubuntu package:
    - Tighten ${binary:Version} depends relationships to "="
    - python: Add an unversioned `2to3' binary
    - python-minimal: Provide symlink to binary and manpage for
      /usr/bin/python2 (Closes: #566266)
  * Update hard coded fallbacks in debian/pyversions.py to add python2.6 to
    supported versions and to make it the default version

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 11 Jul 2010 14:28:47 +0200

python-defaults (2.6.5-5) unstable; urgency=medium

  * Use Python's compileall module instead of pycompile to byte-compile
    debpython module as logging module is not available in pythonX.Y-minimal
    package (Closes: 586743)

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 22 Jun 2010 10:46:48 +0200

python-defaults (2.6.5-4) unstable; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2:
    - fix parsing "XS-Python-Version: X.Y"
    - ignore everything after ", >= 3" in XS-Python-Version
  * Add python-minimal.{postinst,prerm} files to handle .py files
    byte-compilation

  [ Scott Kitterman ]
  * Additonal Python 3 related policy changes:
    - Clarify that helper specific policy does not apply to Python 3

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 21 Jun 2010 23:50:22 +0200

python-defaults (2.6.5-3) unstable; urgency=low

  * Remove '-V' option from pyclean call in runtime.d/public_modules.rtremove
  * Add ${misc:Depends} to Depends in all binary packages
  * Add Vcs-Browser field
  * Add some lintian overrides (for false positives)
    - bump minimum required debhelper version to 6.0.7 (due to dh_lintian)
