@@ -5,7 +5,8 @@ Maintainer: Matthias Klose <doko@debian.org>
 Uploaders: Scott Kitterman <scott@kitterman.com>, Piotr Ożarowski <piotr@debian.org>
 Build-Depends: debhelper (>= 6.0.7~)
 Build-Depends-Indep: libhtml-tree-perl, debiandoc-sgml, python-docutils (>= 0.4-3)
-Standards-Version: 3.8.4
+Standards-Version: 3.9.0
+Homepage: http://www.python.org/
 Vcs-Bzr: http://alioth.debian.org/anonscm/bzr/pkg-python/python-defaults-debian
 Vcs-Browser: http://alioth.debian.org/scm/loggerhead/pkg-python/python-defaults-debian/files
 
@@ -13,11 +14,12 @@ Package: python
 Architecture: all
 Priority: standard
 Depends: ${misc:Depends}, @PVER@ (>= @PREVVER@), python-minimal (= ${binary:Version})
-Conflicts: python-xmlbase, python-csv, python-bz2, python-base, python-central (<< 0.5.5)
-Replaces: python-xmlbase, python-base, python-dev (<< 2.6.5-2)
-Provides: python-email, python-xmlbase, python-plistlib, python-ctypes, python-wsgiref
 Suggests: python-doc (= ${binary:Version}), python-tk (= ${binary:Version}), python-profiler (= ${binary:Version})
-Description: An interactive high-level object-oriented language (default version)
+Conflicts: python-central (<< 0.5.5)
+Breaks: python-csv (<< 1.0-4), python-bz2 (<< 1.1-8), python-email (<< 2.5.5-3)
+Replaces: python-dev (<< 2.6.5-2)
+Provides: python-email, python-ctypes, python-wsgiref
+Description: interactive high-level object-oriented language (default version)
  Python, the high-level, interactive object oriented language,
  includes an extensive class library with lots of goodies for
  network programming, system administration, sounds and graphics.
@@ -29,11 +31,11 @@ Package: python-minimal
 Architecture: all
 Priority: standard
 Depends: ${misc:Depends}, @PVER@-minimal (>= @PREVVER@), dpkg (>= 1.13.20)
-Conflicts: python (<= 2.4-1), python-central (<< 0.5.5)
-Replaces: python (<= 2.4-1)
 Recommends: python
-Breaks: python-dev (<< 2.6), python-dbg (<< 2.6), python-all (<< 2.6), python-all-dev (<< 2.6), python-all-dbg (<< 2.6), python-examples (<< 2.6), idle (<< 2.6), python2.5-minimal (<< 2.5.5-3), python2.6-minimal (<< 2.6.5~rc2-2), python3.1-minimal (<< 3.1.2~rc1-2)
-Description: A minimal subset of the Python language (default version)
+Conflicts: python-central (<< 0.5.5)
+Breaks: python (<= 2.4-1), python-dev (<< 2.6), python-dbg (<< 2.6), python-all (<< 2.6), python-all-dev (<< 2.6), python-all-dbg (<< 2.6), python-examples (<< 2.6), idle (<< 2.6), python2.5-minimal (<< 2.5.5-3), python2.6-minimal (<< 2.6.5~rc2-2), python3.1-minimal (<< 3.1.2~rc1-2)
+Replaces: python (<= 2.4-1)
+Description: minimal subset of the Python language (default version)
  This package contains the interpreter and some essential modules.  It's used
  in the boot process for some basic tasks.
  See /usr/share/doc/@PVER@-minimal/README.Debian for a list of the modules
@@ -42,7 +44,7 @@ Description: A minimal subset of the Python language (default version)
 Package: python-examples
 Architecture: all
 Depends: ${misc:Depends}, python (= ${binary:Version}), @PVER@-examples (>= @PREVVER@)
-Description: Examples for the Python language (default version)
+Description: examples for the Python language (default version)
  Examples, Demos and Tools for Python. These are files included in
  the upstream Python distribution.
  .
@@ -52,7 +54,7 @@ Description: Examples for the Python language (default version)
 Package: python-dev
 Architecture: all
 Depends: ${misc:Depends}, python (= ${binary:Version}), @PVER@-dev (>= @PREVVER@)
-Description: Header files and a static library for Python (default)
+Description: header files and a static library for Python (default)
  Header files, a static library and development tools for building
  Python modules, extending the Python interpreter or embedding Python
  in applications.
@@ -67,7 +69,7 @@ Package: idle
 Architecture: all
 Depends: ${misc:Depends}, python (= ${binary:Version}), python-tk (>= 2.4.3-3), idle-@PVER@
 Enhances: python
-Description: An IDE for Python using Tkinter (default version)
+Description: IDE for Python using Tkinter (default version)
  IDLE is an Integrated Development Environment for Python.
  IDLE is written using Tkinter and therefore quite platform-independent.
  .
@@ -79,9 +81,9 @@ Section: doc
 Architecture: all
 Depends: ${misc:Depends}, python@VER@-doc (>= @PREVVER@)
 Suggests: python-examples, python (= ${binary:Version})
-Conflicts: python-doc-info, python (<< 2.3.5)
-Replaces: python-doc-info, python (<< 2.3.5)
-Description: Documentation for the high-level object-oriented language Python
+Breaks: python (<< 2.3.5)
+Replaces: python (<< 2.3.5)
+Description: documentation for the high-level object-oriented language Python
  This is the official set of documentation for the interactive high-level
  object-oriented language Python (v@VER@). All documents are provided
  in HTML format, some in info format. The package consists of nine documents:
@@ -105,14 +107,14 @@ Section: debug
 Priority: extra
 Depends: ${misc:Depends}, python (= ${binary:Version}), python@VER@-dbg (>= @PREVVER@)
 Provides: python-gdbm-dbg, python-tk-dbg
-Description: Debug Build of the Python Interpreter (version @VER@)
+Description: debug build of the Python Interpreter (version @VER@)
  Python interpreter configured with --pydebug. Dynamically loaded modules are
  searched in /usr/lib/python@VER@/lib-dynload/debug first.
 
 Package: python-all
 Architecture: all
 Depends: ${misc:Depends}, python (= ${binary:Version}), python2.5 (>= 2.5.5-6), python2.6 (>= 2.6.5-2)
-Description: Package depending on all supported Python runtime versions
+Description: package depending on all supported Python runtime versions
  The package currently depends on python2.5 and python2.6, in the future,
  dependencies on jython (Python for a JVM) and ironpython (Python for Mono)
  may be added.
@@ -123,7 +125,7 @@ Description: Package depending on all supported Python runtime versions
 Package: python-all-dev
 Architecture: all
 Depends: ${misc:Depends}, python (= ${binary:Version}), python-all (= ${binary:Version}), python-dev (= ${binary:Version}), python2.5-dev (>= 2.5.5-6), python2.6-dev (>= 2.6.5-2)
-Description: Package depending on all supported Python development packages
+Description: package depending on all supported Python development packages
  The package currently depends on python2.5-dev and python2.6-dev, in the
  future, dependencies on jython (Python for a JVM) and ironpython (Python
  for Mono) may be added.
@@ -136,7 +138,7 @@ Architecture: all
 Section: debug
 Priority: extra
 Depends: ${misc:Depends}, python (= ${binary:Version}), python-all (= ${binary:Version}), python-dbg (= ${binary:Version}), python2.5-dbg (>= 2.5.5-6), python2.6-dbg (>= 2.6.5-2)
-Description: Package depending on all supported Python debugging packages
+Description: package depending on all supported Python debugging packages
  The package currently depends on python2.5-dbg and python2.6-dbg, in the
  future, dependencies on jython (Python for a JVM) and ironpython (Python
  for Mono) may be added.
